--- a/_Customize/main.html
+++ b/_Customize/main.html
@@ -3,7 +3,21 @@
 <!--
 Copyright © 2020 DWER.KR. All Rights Reserved.
 
-Licensed under the Apache License, Version 2.0 (the "License").
+Customized by DWER.KR (marked @TODO at html source file)
+Contact : master@dwer.kr
+
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
 -->
 
 <!--
@@ -70,7 +84,7 @@ permissions and limitations under the License.
             padding: 3px 6px;
         }
         
-// @TODO
+/* @TODO */
 a{
     text-decoration : none;
 }
@@ -103,7 +117,18 @@ h1 > img{
     height : 42px;
     margin-right : 15px;
 }
+/* @TODO */
     </style>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160169989-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160169989-3');
+</script>
 </head>
 
 <!-- DEBUG: Enable this for red outline on all elements -->
@@ -118,6 +143,7 @@ h1 > img{
         </div>
         </div>
     </div>
+<!-- @TODO -->
 
     <div id="page-wrapper">
         <div class="row">
@@ -207,6 +233,7 @@ h1 > img{
         </div>
         </div>
     </div>
+<!-- @TODO -->
 
 </body>
 
@@ -741,7 +768,7 @@ h1 > img{
 //        console.log("hash    : " + parser.hash); // => "#topic"
 //        console.log("host    : " + parser.host); // => "example.com:3000"
 
-// @TODO
+/* @TODO */
 /*
         // If initial bucket has been hard-coded above then use it, else try to
         // derive the initial bucket from the document URL (useful if main.html was
@@ -799,6 +826,7 @@ h1 > img{
                 }
             }
 */
+/* @TODO */
 // @TODO
             var bucket = 'dwer.web.share';
             var region = 'us-east-1';
